[package]
name = "rpizw-test"
version = "0.2.0"
authors = ["Aaron Qian <aq1018@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { git = "https://github.com/golemparts/rppal", features = ["hal"] }
ctrlc = "3.1"
anyhow = "1.0"
rand = "0.8"
embedded-hal = "0.2"
switch-hal = "0.3"
nb = "1.0.0"